--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,3 +1,11 @@
+---
+# this ensures Jekyll reads the file to be transformed into CSS later
+---
+
+@import "reset";
+@import "post";
+@import "site";
+
 body {
 	background: #008082;
 	font-family: sans-serif, serif, monospace;
@@ -156,7 +164,7 @@ ul.topbar {
 	}
 }
 #tag-list {
-    background:transparent url(/assets/img/pixel-alt.png) repeat-y 15px 0;
+    background:transparent url("{{ "/assets/img/pixel-alt.png" | relative_url }}") repeat-y 15px 0;
 }
 #tag-list li {
     padding:0 0 0 2px;
@@ -166,7 +174,7 @@ ul.topbar {
     display:block;
 }
 #tag-list li ul li {
-    background:transparent url(/assets/img/pixel-alt.png) repeat-x 0 8px;
+    background:transparent url("{{ "/assets/img/pixel-alt.png" | relative_url }}") repeat-x 0 8px;
     margin:4px 0 4px 13px;
     padding:0 0 0 20px;
 }
@@ -393,7 +401,7 @@ ul.topbar {
       width: 16px;
 } /* this targets the default scrollbar (compulsory) */
 ::-webkit-scrollbar-track {
-	background-image: url("/assets/img/track.png");
+	background-image: url("{{ "/assets/img/track.png" | relative_url }}");
 	background-repeat: repeat-x repeat-y;
 } /* the new scrollbar will have a flat appearance with the set background color */
  
@@ -413,19 +421,19 @@ ul.topbar {
 	background-repeat: no-repeat;
 
 	&:vertical:decrement {
-		background-image: url("/assets/img/up.png");
+		background-image: url("{{ "/assets/img/up.png" | relative_url }}");
 	}
 
 	&:vertical:increment {
-		background-image: url("/assets/img/down.png");
+		background-image: url("{{ "/assets/img/down.png" | relative_url }}");
 	}
 
 	&:horizontal:decrement {
-		background-image: url("/assets/img/left.png");
+		background-image: url("{{" /assets/img/left.png" | relative_url }}");
 	}
 
 	&:horizontal:increment {
-		background-image: url("/assets/img/right.png");
+		background-image: url("{{ "/assets/img/right.png" | relative_url }}");
 	}
 
 	&:active {
