--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
 			<ul>
 				{% assign tags = site.tags | sort %}
 				{% for tag in tags %}
-				<li><a href="/tag/{{ tag | first | slugify }}/" title="{{ tag[0] | replace:'-', ' ' }}"><img src="{{ "/assets/img/folder.ico" | relative_url }}" />{{ tag[0] | replace:'-', ' ' }}</a></li>
+				<li><a href="{{ site.baseurl }}/tag/{{ tag | first | slugify }}/" title="{{ tag[0] | replace:'-', ' ' }}"><img src="{{ "/assets/img/folder.ico" | relative_url }}" />{{ tag[0] | replace:'-', ' ' }}</a></li>
 				{% endfor %}
 			</ul>
 				</li>
