--- a/_layouts/all.html
+++ b/_layouts/all.html
@@ -4,7 +4,7 @@ layout: default
 <ul>
     {% for post in site.posts %}
     <li>
-        <a href="{{  post.url | relative_url }}#content" title="{{ post.title }}">
+        <a href="{{  post.url | relative_url }}" title="{{ post.title }}">
             <img src="{{ "/assets/img/file.ico" | relative_url }}" title="{{ post.title }}" />{{ post.title }}</a>
     </li>
     {% endfor %}
