--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,14 +29,14 @@
 		<div class="tag_list">
 			<ul id="tag-list">
 				<li>
-					<a href="{{ site.baseurl }}/" ><img src="{{ "/assets/img/disk.png" | relative_url }}" />(C:)</a>
+					<a href="{{ site.baseurl }}" ><img src="{{ "/assets/img/disk.png" | relative_url }}" />(C:)</a>
 					<ul>
 						{% assign tags = site.tags | sort %}
 						{% for tag in tags %}
 							<li><a href="{{ site.baseurl }}/tag/{{ tag | first | slugify }}/" title="{{ tag[0] | replace:'-', ' ' }}"><img src="{{ "/assets/img/folder.ico" | relative_url }}" />{{ tag[0] | replace:'-', ' ' }}</a></li>
 						{% endfor %}
 					</ul>
-					<a href="{{ site.baseurl }}/all" ><img src="{{ "/assets/img/briefcase.png" | relative_url }}" />All</a>					
+					<a href="{{ site.baseurl }}" ><img src="{{ "/assets/img/briefcase.png" | relative_url }}" />All</a>					
 				</li>
 			</ul>
 		</div>
